--- a/index.css
+++ b/index.css
@@ -1,23 +1,33 @@
 html, body {
-  background-color: #6b5fff;
-  align-content: center;
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
+    background-color: #6b5fff;
+    align-content: center;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: Rubik, sans-serif;
-  text-align: center;
-  font-style: normal;
-  font-weight: 500;
-  padding-left: 10px;
-  padding-right: 10px;
-  white-space: pre-wrap;
+    font-family: Rubik, sans-serif;
+    text-align: center;
+    font-style: normal;
+    font-weight: 500;
+    padding-left: 10px;
+    padding-right: 10px;
+    white-space: pre-wrap;
 
-  color: white;
-  -webkit-text-stroke: 20px black;
-  paint-order: stroke fill;
+    color: white;
+    -webkit-text-stroke: 20px black;
+    paint-order: stroke fill;
+    animation: spin 3s linear infinite;
+}
+
+@keyframes spin {
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
 }
 
 h1 {font-size: 1000%;}
